; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_register_code16.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_register_code16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KC_NO = common dso_local global i64 0, align 8
@register_mods = common dso_local global i32 0, align 4
@register_weak_mods = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @register_code16(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = call i64 @IS_MOD(i64 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @KC_NO, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %6, %1
  %11 = load i64, i64* %2, align 8
  %12 = load i32, i32* @register_mods, align 4
  %13 = call i32 @do_code16(i64 %11, i32 %12)
  br label %18

14:                                               ; preds = %6
  %15 = load i64, i64* %2, align 8
  %16 = load i32, i32* @register_weak_mods, align 4
  %17 = call i32 @do_code16(i64 %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %10
  %19 = load i64, i64* %2, align 8
  %20 = call i32 @register_code(i64 %19)
  ret void
}

declare dso_local i64 @IS_MOD(i64) #1

declare dso_local i32 @do_code16(i64, i32) #1

declare dso_local i32 @register_code(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
